--- a/force-app/main/default/lwc/displayContactDataTable/newExtentiaProject/aaravOrgProject/force-app/main/default/classes/newproject/force-app/main/default/classes/rt.cls
+++ b/force-app/main/default/lwc/displayContactDataTable/newExtentiaProject/aaravOrgProject/force-app/main/default/classes/newproject/force-app/main/default/classes/rt.cls
@@ -2,5 +2,6 @@ public inherited sharing class rt {
     public rt() {
              system.debug('hello all');
              system.debug('my chnages');
+             system.debug('just added');
     }
 }
